--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.3",
     "d3-force": "^3.0.0",
+    "d3-selection": "^3.0.0",
+    "d3-zoom": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
